# openivm

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md
.cache/clangd/: compile_commands.json
.claude/: sync-codex-skills.sh
benchmark/: CMakeLists.txt
benchmark/poc/: README.md  RESULTS_SUMMARY.md  amortization_poc.py  chained_mv_poc.py  diverse_pipelines.py  fanout_diamond_poc.py  goldilocks_poc.py  join_poc.py  mixed_dml_poc.py  partial_match_poc.py  percentiles_poc.py  robustness_poc.py
benchmark/queries/: ducklake_0026.sql  ducklake_0028.sql  ducklake_0029.sql  ducklake_0071.sql  ducklake_0072.sql  ducklake_0073.sql  ducklake_0075.sql  ducklake_0076.sql  ducklake_0081.sql  ducklake_0082.sql  ducklake_0083.sql  ducklake_0084.sql  ducklake_0086.sql  ducklake_0088.sql  ducklake_0090.sql  ducklake_0105.sql  ducklake_0109.sql  ducklake_0124.sql  ducklake_0135.sql  ducklake_0143.sql  ducklake_0145.sql  ducklake_0148.sql  ducklake_0155.sql  ducklake_0157.sql  ducklake_0175.sql  ducklake_0178.sql  ducklake_0180.sql  ducklake_0189.sql  ducklake_0193.sql  ducklake_0198.sql  ducklake_0204.sql  ducklake_0211.sql  ducklake_0216.sql  ducklake_0224.sql  ducklake_0232.sql  ducklake_0234.sql  ducklake_0238.sql  ducklake_0245.sql  query_0075.sql  query_0112.sql  (+219 more)
benchmark/queries/tpcc/: ducklake_0026.sql  ducklake_0145.sql  ducklake_0165.sql  ducklake_0251.sql  ducklake_0252.sql  ducklake_0253.sql  ducklake_0254.sql  ducklake_0255.sql  ducklake_0256.sql  ducklake_0257.sql  ducklake_0258.sql  ducklake_0259.sql  ducklake_0260.sql  ducklake_0261.sql  ducklake_0262.sql  ducklake_0263.sql  ducklake_0264.sql  ducklake_0265.sql  ducklake_0266.sql  ducklake_0267.sql  ducklake_0268.sql  ducklake_0269.sql  ducklake_0270.sql  ducklake_0271.sql  ducklake_0272.sql  ducklake_0273.sql  ducklake_0274.sql  ducklake_0275.sql  ducklake_0276.sql  ducklake_0277.sql  ducklake_0278.sql  ducklake_0279.sql  ducklake_0280.sql  ducklake_0281.sql  ducklake_0282.sql  ducklake_0283.sql  ducklake_0284.sql  ducklake_0285.sql  ducklake_0286.sql  ducklake_0287.sql  (+335 more)
benchmark/queries/tpcdi/: tpcdi_ivm0001_brokerage_cash_transaction.sql  tpcdi_ivm0002_brokerage_daily_market.sql  tpcdi_ivm0008_finwire_company.sql  tpcdi_ivm0009_finwire_financial.sql  tpcdi_ivm0010_finwire_security.sql  tpcdi_ivm0011_hr_employee.sql  tpcdi_ivm0016_reference_trade_type.sql  tpcdi_ivm0017_syndicated_prospect.sql  tpcdi_ivm0018_dim_account.sql  tpcdi_ivm0020_dim_company.sql  tpcdi_ivm0027_fact_holdings.sql  tpcdi_ivm0028_fact_market_history.sql  tpcdi_ivm0029_fact_trade.sql  tpcdi_ivm0030_fact_watches.sql  tpcdi_ivm0032_cash_transactions.sql  tpcdi_ivm0033_companies.sql  tpcdi_ivm0035_daily_market.sql  tpcdi_ivm0037_employees.sql  tpcdi_ivm0038_financials.sql  tpcdi_ivm0039_holdings_history.sql  tpcdi_ivm0041_trades.sql  tpcdi_ivm0042_trades_history.sql  tpcdi_query0003_brokerage_holding_history.sql  tpcdi_query0004_brokerage_trade.sql  tpcdi_query0005_brokerage_trade_history.sql  tpcdi_query0006_brokerage_watch_history.sql  tpcdi_query0007_crm_customer_mgmt.sql  tpcdi_query0012_reference_date.sql  tpcdi_query0013_reference_industry.sql  tpcdi_query0014_reference_status_type.sql  tpcdi_query0015_reference_tax_rate.sql  tpcdi_query0019_dim_broker.sql  tpcdi_query0021_dim_customer.sql  tpcdi_query0022_dim_date.sql  tpcdi_query0023_dim_security.sql  tpcdi_query0024_dim_trade.sql  tpcdi_query0025_fact_cash_balances.sql  tpcdi_query0026_fact_cash_transactions.sql  tpcdi_query0031_accounts.sql  tpcdi_query0034_customers.sql  (+5 more)
benchmark/scripts/: generate_queries.py  strip_dbt_jinja.py  validate_incremental.py
benchmark/src/: daemon_benchmark.cpp  flag_benchmark.cpp  rewriter_benchmark.cpp  tpcc_helpers.cpp  tpcc_setup.cpp  tpcdi_helpers.cpp  tpcdi_helpers.hpp
contrib/: bootstrap-dev-env.ps1  bootstrap-dev-env.sh  common.sh
docs/: TODO.md  codebase-audit-2026-04-30.md  delta-skipping-rules.md  ducklake.md  limitations.md  refresh_hooks.md
docs/internals/: concurrency.md  delta-tables.md  linearity.md  metadata-columns.md  parser.md  schema-evolution.md
docs/operators/: cte-subquery.md  distinct.md  full-outer-join.md  grouped-aggregates.md  inner-join.md  left-join.md  list-aggregates.md  projection-filter.md  semi-anti-join.md  top-k.md  ungrouped-aggregates.md  union-all.md  window-functions.md
docs/optimizations/: append-only.md  companion-rows.md  delta-consolidation.md  empty-delta-skip.md  fk-aware-pruning.md  indexing.md
docs/refresh/: automatic-refresh.md  pipelines.md  refresh-strategies.md
examples/: README.md  openivm_demo.cpp
src/: compile_facts.cpp  openivm_extension.cpp
src/core/: incremental_checker.cpp  ivm_checker.cpp  ivm_delta_model.cpp  ivm_plan_rewrite.cpp  ivm_view_classifier.cpp  openivm_metadata.cpp  openivm_parser.cpp  openivm_refresh_daemon.cpp  openivm_utils.cpp  parser.cpp  parser_create_mv_helpers.cpp  parser_ddl.cpp  parser_parse.cpp  parser_plan_helpers.cpp  parser_sql_extractors.cpp  plan_rewrite.cpp  plan_rewrite_aggregates.cpp  refresh_daemon.cpp  refresh_locks.cpp  refresh_metadata.cpp  sql_utils.cpp
src/delta/: delta_compiler.cpp  delta_helpers.cpp
src/include/: compile_facts.hpp
src/match/: constraint_cache.cpp  equivalence_classes.cpp  mv_catalog_index.cpp  plan_canonical.cpp  predicate_oracle.cpp  view_catalog_index.cpp
src/rules/: aggregate.cpp  column_hider.cpp  delim_join.cpp  distinct.cpp  ducklake_join.cpp  filter.cpp  helpers.cpp  incremental_rewrite_rule.cpp  join.cpp  join_output.cpp  openivm_insert_rule.cpp  openivm_rewrite_rule.cpp  projection.cpp  refresh_insert_rule.cpp  scan.cpp  schema_evolution.cpp  topk.cpp  union.cpp  window.cpp
src/upsert/: openivm_compile_upsert.cpp  openivm_cost_model.cpp  openivm_index_regen.cpp  openivm_upsert.cpp  refresh.cpp  refresh_compiler.cpp  refresh_compiler_aux.cpp  refresh_cost_model.cpp  refresh_delta_fast_paths.cpp  refresh_group_measure.cpp  refresh_helpers.cpp  refresh_index_regen.cpp  refresh_sql.cpp  refresh_window.cpp
test/sql/: aggregate.test  argminmax.test  auto_refresh.test  chained.test  (+85 more)
(+78 files in other folders)
